test/sema/declref.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo(): unit {}

fn main(): unit {
    mut x: number = 1.0;

    foo;
    
    x;
    
    // CHECK: [[# @LINE + 1 ]]:5: error: symbol 'y' not found
    y;

    let foo: number = 2.0;

    // CHECK: [[# @LINE + 1 ]]:8: error: calling expression of type 'number'
    foo();
}

fn bar(x: number): unit {
    x;

    // CHECK: [[# @LINE + 1 ]]:6: error: calling expression of type 'number'
    x();
}
